# icare

./: icare.sh  icare.yaml.defaults  pyproject.toml
.github/workflows/: test_api_and_frontend.yaml  test_icare_extensions.yaml
extensions/skyportal/: Makefile
extensions/skyportal/baselayer/app/: app_server.py
extensions/skyportal/skyportal/handlers/api/: fink_photometry.py
extensions/skyportal/static/js/components/telescope/: TelescopeMapDashboard.jsx
extensions/skyportal/static/js/components/templates/: DashboardGrandma.jsx.template
extensions/skyportal/static/js/components/widget/: DynamicTagDisplay.jsx  RecentSources.jsx
launcher/: __main__.py  skyportal.py
launcher/commands/: diff.py  update.py
tools/: check_environment.py
